--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -1,37 +1,45 @@
 .form {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    border: 1px solid black;
-    border-radius: 5px;
-    padding: 15px;
-    background-color: aliceblue;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 200px;
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 15px;
+  background-color: aliceblue;
 }
 
 .label {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
 
 .parag {
-    justify-content: center;
-    font-size: 20px;
-    font-weight: bold;
+  justify-content: center;
+  font-size: 20px;
+  font-weight: bold;
 }
 
 .submit {
-    padding: 5px;
-    font-size: 15px;
-    margin-top: 15px;
-    border: 1px solid  rgb(112, 93, 160);
-    border-radius: 3px;
-    background-color: antiquewhite;
-    margin-bottom: 10px;
+  width: 100%;
+  padding: 5px;
+  font-size: 15px;
+  margin-top: 15px;
+  border: 3px solid darkgrey;
+  border-radius: 3px;
+  background-color: antiquewhite;
+  margin-bottom: 10px;
 }
 
 .submit:hover {
-    scale: 1.1;
+  scale: 1.05;
+}
+
+.input {
+  border-radius: 4px;
+  height: 2rem;
+  width: 100%;
 }
