--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -1,9 +1,9 @@
 .list {
-    display: flex;
-    flex-direction: row;
-    
+  display: flex;
+  flex-direction: row;
 }
 
 .delBtn {
-    margin-left: 10px;
+  margin-left: 10px;
+  margin-bottom: 10px;
 }
